Added new Advancements and Changed old one

--- a/production/Terraria_Trinkets.main/assets/terracraft/lang/en_us.json
+++ b/production/Terraria_Trinkets.main/assets/terracraft/lang/en_us.json
@@ -14,8 +14,14 @@
   "terracraft.status.effectsonly": "Effects only",
   "terracraft.status.toggletooltip": "(right click)",
   "itemGroup.terracraft.item_group": "terracraft",
-  "terracraft.advancements.amateur_archaeologist.title": "Amateur Archaeologist",
-  "terracraft.advancements.amateur_archaeologist.description": "Find an Accessory",
+  "terracraft.advancements.root.title": "TerraCraft",
+  "terracraft.advancements.root.description": "A terrific journey begins!",
+  "terracraft.advancements.i_am_loot.title": "I Am Loot!",
+  "terracraft.advancements.i_am_loot.description": "Find an Accessory",
+  "terracraft.advancements.star_power.title": "Star Power",
+  "terracraft.advancements.star_power.description": "Craft a mana crystal out of fallen stars, and consume it",
+  "terracraft.advancements.the_corruption.title": "The Corruption",
+  "terracraft.advancements.the_corruption.description": "Enter the Corruption biome",
   "terracraft.advancements.chest_slayer.title": "Chest Slayer",
   "terracraft.advancements.chest_slayer.description": "Kill a Mimic",
   "entity.terracraft.mimic": "Mimic",
