Made magic items easier to make

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -13,7 +13,7 @@
   "terracraft.status.cosmeticonly": "Cosmetic only",
   "terracraft.status.effectsonly": "Effects only",
   "terracraft.status.toggletooltip": "(right click)",
-  "itemGroup.terracraft.item_group": "terracraft",
+  "itemGroup.terracraft.item_group": "Terracraft",
   "terracraft.advancements.root.title": "TerraCraft",
   "terracraft.advancements.root.description": "A terrific journey begins!",
   "terracraft.advancements.i_am_loot.title": "I Am Loot!",
