Added mana regen gamerule. Changed default regen speed to 2.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -364,5 +364,6 @@
   "text.autoconfig.terracraft.option.worldgen.caveChest.maxCaveY": "Maximum Cave y-level",
   "text.autoconfig.terracraft.option.worldgen.caveChest.maxCaveY.@Tooltip": "Maximum y-level to generate cave chests at",
   "text.autoconfig.terracraft.option.worldgen.caveChest.deepCaveY": "Deep Cave y-level",
-  "text.autoconfig.terracraft.option.worldgen.caveChest.deepCaveY.@Tooltip": "Below this y-level cave chests are considered deep cave"
+  "text.autoconfig.terracraft.option.worldgen.caveChest.deepCaveY.@Tooltip": "Below this y-level cave chests are considered deep cave",
+  "gamerule.manaRegenSpeed": "Mana Regen Speed"
 }
