Added Gold Chest (Still WIP). Replaced Cave Chest with Gold Chest.
Biome specific chests next such as Ice Chest and Water Chest,
just need to fix open tick not working.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -26,10 +26,11 @@
   "terracraft.advancements.chest_slayer.description": "Kill a Mimic",
   "entity.terracraft.mimic": "Mimic",
   "entity.terracraft.demon_eye": "Demon Eye",
+  "entity.terracraft.falling_star": "Falling Star",
+  "entity.terracraft.gold_chest": "Gold Chest",
+  "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terracraft.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terracraft.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
-  "entity.terracraft.falling_star": "Falling Star",
-  "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terracraft.lens": "Lens",
   "item.terracraft.black_lens": "Black Lens",
   "item.terracraft.snorkel": "Snorkel",
@@ -265,6 +266,7 @@
   "item.terracraft.demonite_ore": "Demonite Ore",
   "item.terracraft.demonite_ingot": "Demonite Ingot",
   "block.terracraft.tinkerer_workshop": "Tinkerer's Table",
+  "block.terracraft.gold_chest": "Gold Chest",
   "block.terracraft.corrupted_grass": "Corrupted Grass Block",
   "block.terracraft.corrupted_gravel": "Corrupted Gravel",
   "block.terracraft.corrupted_sand": "Corrupted Sand",
