--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -28,6 +28,7 @@
   "entity.terracraft.demon_eye": "Demon Eye",
   "entity.terracraft.falling_star": "Falling Star",
   "entity.terracraft.gold_chest": "Gold Chest",
+  "entity.terracraft.frozen_chest": "Frozen Chest",
   "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terracraft.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terracraft.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
@@ -267,6 +268,7 @@
   "item.terracraft.demonite_ingot": "Demonite Ingot",
   "block.terracraft.tinkerer_workshop": "Tinkerer's Table",
   "block.terracraft.gold_chest": "Gold Chest",
+  "block.terracraft.frozen_chest": "Frozen Chest",
   "block.terracraft.corrupted_grass": "Corrupted Grass Block",
   "block.terracraft.corrupted_gravel": "Corrupted Gravel",
   "block.terracraft.corrupted_sand": "Corrupted Sand",
