Trapped Chest system working, can easily make any chest trapped now.
Next is some sort of redstone in the shape of a normal block or something similar, maybe even some sort of remote tnt. Need this so that the trapped chests aren't easily found out, tnt will also explode immediately, so have fun with that.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -268,7 +268,9 @@
   "item.terracraft.demonite_ingot": "Demonite Ingot",
   "block.terracraft.tinkerer_workshop": "Tinkerer's Table",
   "block.terracraft.gold_chest": "Gold Chest",
+  "block.terracraft.trapped_gold_chest": "Trapped Gold Chest",
   "block.terracraft.frozen_chest": "Frozen Chest",
+  "block.terracraft.trapped_frozen_chest": "Trapped Frozen Chest",
   "block.terracraft.corrupted_grass": "Corrupted Grass Block",
   "block.terracraft.corrupted_gravel": "Corrupted Gravel",
   "block.terracraft.corrupted_sand": "Corrupted Sand",
