Added Instant TNT and Redstone Stone (Deepslate variant as well). Cave Chests are now significantly more dangerous.
Added Water Chest.
Water Chests now spawn in oceans with ocean loot.

Removed the spawning of trapped chests and mimics on the surface.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -29,6 +29,7 @@
   "entity.terracraft.falling_star": "Falling Star",
   "entity.terracraft.gold_chest": "Gold Chest",
   "entity.terracraft.frozen_chest": "Frozen Chest",
+  "entity.terracraft.water_chest": "Water Chest",
   "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terracraft.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terracraft.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
@@ -271,6 +272,10 @@
   "block.terracraft.trapped_gold_chest": "Trapped Gold Chest",
   "block.terracraft.frozen_chest": "Frozen Chest",
   "block.terracraft.trapped_frozen_chest": "Trapped Frozen Chest",
+  "block.terracraft.water_chest": "Water Chest",
+  "block.terracraft.redstone_stone": "Redstone Stone",
+  "block.terracraft.redstone_deepslate": "Redstone Deepslate",
+  "block.terracraft.instant_tnt": "Instant TNT",
   "block.terracraft.corrupted_grass": "Corrupted Grass Block",
   "block.terracraft.corrupted_gravel": "Corrupted Gravel",
   "block.terracraft.corrupted_sand": "Corrupted Sand",
