Added Ivy and Skyware chests. Added Skyware chest to Floating Island. Added Ivy Chest to Cave Chest Feature.
Updated version to 1.2.0 (update still wip though).
Updated gradle to 7.4.

Also, some other small things.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -29,7 +29,9 @@
   "entity.terracraft.falling_star": "Falling Star",
   "entity.terracraft.gold_chest": "Gold Chest",
   "entity.terracraft.frozen_chest": "Frozen Chest",
+  "entity.terracraft.ivy_chest": "Ivy Chest",
   "entity.terracraft.water_chest": "Water Chest",
+  "entity.terracraft.skyware_chest": "Skyware Chest",
   "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terracraft.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terracraft.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
@@ -272,7 +274,10 @@
   "block.terracraft.trapped_gold_chest": "Trapped Gold Chest",
   "block.terracraft.frozen_chest": "Frozen Chest",
   "block.terracraft.trapped_frozen_chest": "Trapped Frozen Chest",
+  "block.terracraft.ivy_chest": "Ivy Chest",
+  "block.terracraft.trapped_ivy_chest": "Trapped Ivy Chest",
   "block.terracraft.water_chest": "Water Chest",
+  "block.terracraft.skyware_chest": "Skyware Chest",
   "block.terracraft.redstone_stone": "Redstone Stone",
   "block.terracraft.redstone_deepslate": "Redstone Deepslate",
   "block.terracraft.instant_tnt": "Instant TNT",
@@ -326,7 +331,7 @@
   "terracraft.subtitles.mana.full": "Mana Full",
   "terracraft.subtitles.fallingstar.fall": "Star Falling",
   "terracraft.subtitles.fallingstar.crash": "Star Crashes",
-  "text.autoconfig.terracraft.title": "terracraft Configuration",
+  "text.autoconfig.terracraft.title": "Terracraft Configuration",
   "text.autoconfig.terracraft.category.general": "General",
   "text.autoconfig.terracraft.option.general.everlastingFoodCooldown": "Everlasting foods cooldown",
   "text.autoconfig.terracraft.option.general.everlastingFoodCooldown.@Tooltip[0]": "Cooldown in ticks for the Everlasting",
@@ -379,6 +384,9 @@
   "text.autoconfig.terracraft.option.worldgen.caveChest.maxCaveY.@Tooltip": "Maximum y-level to generate cave chests at",
   "text.autoconfig.terracraft.option.worldgen.caveChest.deepCaveY": "Deep Cave y-level",
   "text.autoconfig.terracraft.option.worldgen.caveChest.deepCaveY.@Tooltip": "Below this y-level cave chests are considered deep cave",
+  "text.autoconfig.terracraft.option.worldgen.structures": "Structures",
+  "text.autoconfig.terracraft.option.worldgen.structures.floatingIslandHeight": "Floating Island y-level",
+  "text.autoconfig.terracraft.option.worldgen.structures.floatingIslandHeight.@Tooltip": "The y-level that Floating Islands will generate at",
   "gamerule.manaRegenSpeed": "Mana Regen Speed",
   "commands.setMaxMana.pass": "Set Max Mana of %s to %s stars",
   "commands.setMaxMana.fail": "Failed to set Max Mana for that player to %s stars",
