Added Sandstone and Shadow Chests (Generate in correct areas with their own loot tables) Added Nether Chest Generator (for Shadow Chest)
Renamed Universal Attractor to be Treasure Magnet
Finished rename of Aqua Dashers to Lava Waders
Removed chance of Mimics spawning instead of Cave Chest

Added block loot table for ivy chest, which I missed apparently

Fixed Crash when entering another dimension (I guess I forgot to go to the nether at literally any point)

--- a/src/main/resources/assets/terracraft/lang/de_de.json
+++ b/src/main/resources/assets/terracraft/lang/de_de.json
@@ -30,7 +30,7 @@
   "item.terracraft.scarf_of_invisibility": "Schal der Unsichtbarkeit",
   "item.terracraft.digging_claws": "Grabende Krallen",
   "item.terracraft.steadfast_spikes": "Standhafte gekrallte Stiefel",
-  "item.terracraft.universal_attractor": "Allgemeiner Magnet",
+  "item.terracraft.treasure_magnet": "Allgemeiner Magnet",
   "item.terracraft.kitty_slippers": "Kätzchen-Hausschuhe",
   "item.terracraft.running_shoes": "Laufschuhe",
   "item.terracraft.bunny_hoppers": "Gehoppel-Hausschuhe",
@@ -61,7 +61,7 @@
   "item.terracraft.scarf_of_invisibility.tooltip": "Träger(in) ist unsichtbar.",
   "item.terracraft.digging_claws.tooltip": "Träger(in) kann Blocks schneller Abbauen und hat eine natürliche höhere Abbauenstufe.",
   "item.terracraft.steadfast_spikes.tooltip": "Träger(in) ist immun gegen Rückstoß.",
-  "item.terracraft.universal_attractor.tooltip": "Zieht nahe Gegenstände an.",
+  "item.terracraft.treasure_magnet.tooltip": "Zieht nahe Gegenstände an.",
   "item.terracraft.kitty_slippers.tooltip": "Creepers weichen den Träger oder die Trägerin aus.",
   "item.terracraft.running_shoes.tooltip": "Nimmt Geschwindigkeit zu während sprinten.",
   "item.terracraft.bunny_hoppers.tooltip": "Nimmt Springenhöhe zu und gibt Sicherheit gegen Fallschaden zu.",
