--- a/src/main/resources/assets/terracraft/lang/en_pt.json
+++ b/src/main/resources/assets/terracraft/lang/en_pt.json
@@ -30,7 +30,7 @@
   "item.terracraft.scarf_of_invisibility": "Flyin' Dutchman's Ghostly Scarf",
   "item.terracraft.digging_claws": "Diggin' Hooks",
   "item.terracraft.steadfast_spikes": "Hooks o' Footsies",
-  "item.terracraft.universal_attractor": "Magic Metal",
+  "item.terracraft.treasure_magnet": "Magic Metal",
   "item.terracraft.kitty_slippers": "Peg-leg o' Cat",
   "item.terracraft.running_shoes": "Peg-leg o' Full Sails",
   "item.terracraft.bunny_hoppers": "Peg-leg o' Rabbit",
@@ -67,7 +67,7 @@
   "item.terracraft.scarf_of_invisibility.tooltip": "Turns ye invisible",
   "item.terracraft.digging_claws.tooltip": "Increases yer digging speed and base digging level",
   "item.terracraft.steadfast_spikes.tooltip": "Helps ye keep yer footing during stormy seas",
-  "item.terracraft.universal_attractor.tooltip": "Attracts nearby loot",
+  "item.terracraft.treasure_magnet.tooltip": "Attracts nearby loot",
   "item.terracraft.kitty_slippers.tooltip": "Scares away the creepers",
   "item.terracraft.running_shoes.tooltip": "Increases yer landlubbin' speed and makes ye step higher when wobblin' at speed",
   "item.terracraft.bunny_hoppers.tooltip": "Allows ye to leap and fall like a rabbit",
