--- a/src/main/resources/assets/terracraft/lang/fr_fr.json
+++ b/src/main/resources/assets/terracraft/lang/fr_fr.json
@@ -30,7 +30,7 @@
   "item.terracraft.scarf_of_invisibility": "Écharpe d'invisibilité",
   "item.terracraft.digging_claws": "Griffes de mineur",
   "item.terracraft.steadfast_spikes": "Pointes solides",
-  "item.terracraft.universal_attractor": "Attracteur universel",
+  "item.terracraft.treasure_magnet": "Attracteur universel",
   "item.terracraft.kitty_slippers": "Pantoufles chaton",
   "item.terracraft.running_shoes": "Chaussures de course",
   "item.terracraft.bunny_hoppers": "Bunny Hoppers",
@@ -62,7 +62,7 @@
   "item.terracraft.scarf_of_invisibility.tooltip": "Rend le porteur invisible",
   "item.terracraft.digging_claws.tooltip": "Augmente la vitesse d'extraction du porteur et la puissance de base de l'outil",
   "item.terracraft.steadfast_spikes.tooltip": "Annule le recul des dégâts subis quand porté",
-  "item.terracraft.universal_attractor.tooltip": "Attire les objets à proximité",
+  "item.terracraft.treasure_magnet.tooltip": "Attire les objets à proximité",
   "item.terracraft.kitty_slippers.tooltip": "Les creepers évitent le porteur",
   "item.terracraft.running_shoes.tooltip": "Augmente la vitesse de déplacement et la hauteur des pas pendant le sprint",
   "item.terracraft.bunny_hoppers.tooltip": "Augmente la hauteur de saut du porteur et lui confère l'immunité aux dégâts de chute",
