--- a/src/main/resources/assets/terracraft/lang/pl_pl.json
+++ b/src/main/resources/assets/terracraft/lang/pl_pl.json
@@ -29,7 +29,7 @@
     "item.terracraft.scarf_of_invisibility": "Szalik Niewidka",
     "item.terracraft.digging_claws": "Pazury do Kopania",
     "item.terracraft.steadfast_spikes": "Mocne Kolce",
-    "item.terracraft.universal_attractor": "Uniwersalny Magnes",
+    "item.terracraft.treasure_magnet": "Uniwersalny Magnes",
     "item.terracraft.kitty_slippers": "Kocie Kapcie",
     "item.terracraft.running_shoes": "Buty Sportowe",
     "item.terracraft.bunny_hoppers": "Królicze Kapcie",
@@ -60,7 +60,7 @@
     "item.terracraft.scarf_of_invisibility.tooltip": "Sprawia, że noszący staje się niewidzialny",
     "item.terracraft.digging_claws.tooltip": "Zwiększa prędkość kopania oraz poziom kopania noszącego",
     "item.terracraft.steadfast_spikes.tooltip": "Daje odporność na odrzut",
-    "item.terracraft.universal_attractor.tooltip": "Przyciąga pobliskie przedmioty",
+    "item.terracraft.treasure_magnet.tooltip": "Przyciąga pobliskie przedmioty",
     "item.terracraft.kitty_slippers.tooltip": "Creepery unikają noszącego",
     "item.terracraft.running_shoes.tooltip": "Zwiększa prędkość poruszania się oraz wysokość kroków noszącego podczas sprintowania",
     "item.terracraft.bunny_hoppers.tooltip": "Zwiększa wysokość skoku noszącego oraz daje odporność na obrażenia od upadku",
