--- a/src/main/resources/assets/terracraft/lang/pt_br.json
+++ b/src/main/resources/assets/terracraft/lang/pt_br.json
@@ -29,7 +29,7 @@
   "item.terracraft.scarf_of_invisibility": "Cachecol da Invisibilidade",
   "item.terracraft.digging_claws": "Garras de Escavação",
   "item.terracraft.steadfast_spikes": "Espinhos Firmes",
-  "item.terracraft.universal_attractor": "Atrator Universal",
+  "item.terracraft.treasure_magnet": "Atrator Universal",
   "item.terracraft.kitty_slippers": "Chinelos de Gatinho",
   "item.terracraft.running_shoes": "Tênis de Corrida",
   "item.terracraft.bunny_hoppers": "Sapato de Coelhos Saltitantes",
@@ -66,7 +66,7 @@
   "item.terracraft.scarf_of_invisibility.tooltip": "Torna o usuário invisível",
   "item.terracraft.digging_claws.tooltip": "Aumenta a velocidade de mineração do usuário e o nível básico de mineração",
   "item.terracraft.steadfast_spikes.tooltip": "Concede imunidade a repulsão",
-  "item.terracraft.universal_attractor.tooltip": "Atrai itens próximos",
+  "item.terracraft.treasure_magnet.tooltip": "Atrai itens próximos",
   "item.terracraft.kitty_slippers.tooltip": "Os Creepers evitam o usuário",
   "item.terracraft.running_shoes.tooltip": "Aumenta a velocidade de movimento e a altura do passo enquanto corre",
   "item.terracraft.bunny_hoppers.tooltip": "Aumenta a altura do pulo do usuário e concede imunidade a dano por queda",
