--- a/src/main/resources/assets/terracraft/lang/ru_ru.json
+++ b/src/main/resources/assets/terracraft/lang/ru_ru.json
@@ -33,7 +33,7 @@
   "item.terracraft.scarf_of_invisibility": "Шарф невидимости",
   "item.terracraft.digging_claws": "Когти для копания",
   "item.terracraft.steadfast_spikes": "Устойчивые шипы",
-  "item.terracraft.universal_attractor": "Универсальный магнит",
+  "item.terracraft.treasure_magnet": "Универсальный магнит",
   "item.terracraft.kitty_slippers": "Тапочки 'Кошечки'",
   "item.terracraft.running_shoes": "Беговая обувь",
   "item.terracraft.bunny_hoppers": "Обувь прыгуна",
@@ -67,7 +67,7 @@
   "item.terracraft.scarf_of_invisibility.tooltip": "Владелец становится невидимым",
   "item.terracraft.digging_claws.tooltip": "У владельца увеличивается скорость и базовый уровень майнинга",
   "item.terracraft.steadfast_spikes.tooltip": "Даётся иммунитет к отбрасыванию",
-  "item.terracraft.universal_attractor.tooltip": "Предметы рядом будут притягиваться",
+  "item.terracraft.treasure_magnet.tooltip": "Предметы рядом будут притягиваться",
   "item.terracraft.kitty_slippers.tooltip": "Криперы будут избегать владельца",
   "item.terracraft.running_shoes.tooltip": "Увеличивает скорость передвижения во время бега",
   "item.terracraft.bunny_hoppers.tooltip": "Увеличивает высоту прыжка и дает иммунитет к урону от падения",
