--- a/src/main/resources/assets/terracraft/lang/zh_cn.json
+++ b/src/main/resources/assets/terracraft/lang/zh_cn.json
@@ -30,7 +30,7 @@
   "item.terracraft.scarf_of_invisibility": "隐身围巾",
   "item.terracraft.digging_claws": "挖掘爪",
   "item.terracraft.steadfast_spikes": "牢固鞋钉",
-  "item.terracraft.universal_attractor": "强力磁铁",
+  "item.terracraft.treasure_magnet": "强力磁铁",
   "item.terracraft.kitty_slippers": "猫咪拖鞋",
   "item.terracraft.running_shoes": "跑鞋",
   "item.terracraft.bunny_hoppers": "跃兔鞋",
@@ -64,7 +64,7 @@
   "item.terracraft.scarf_of_invisibility.tooltip": "使你隐身",
   "item.terracraft.digging_claws.tooltip": "增加挖掘速度和挖掘等级",
   "item.terracraft.steadfast_spikes.tooltip": "免疫击退",
-  "item.terracraft.universal_attractor.tooltip": "吸引附近的物品",
+  "item.terracraft.treasure_magnet.tooltip": "吸引附近的物品",
   "item.terracraft.kitty_slippers.tooltip": "苦力怕见到你转头就跑",
   "item.terracraft.running_shoes.tooltip": "增加疾跑时的移速和抬步高度",
   "item.terracraft.bunny_hoppers.tooltip": "增加跳跃高度，免疫摔落伤害",
