--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -27,8 +27,10 @@
   "entity.terracraft.gold_chest": "Gold Chest",
   "entity.terracraft.frozen_chest": "Frozen Chest",
   "entity.terracraft.ivy_chest": "Ivy Chest",
+  "entity.terracraft.sandstone_chest": "Sandstone Chest",
   "entity.terracraft.water_chest": "Water Chest",
   "entity.terracraft.skyware_chest": "Skyware Chest",
+  "entity.terracraft.shadow_chest": "Shadow Chest",
   "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terracraft.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terracraft.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
@@ -91,7 +93,7 @@
   "item.terracraft.goblin_tech": "Goblin Tech",
   "item.terracraft.pda": "PDA",
   "item.terracraft.cell_phone": "Cell Phone",
-  "item.terracraft.universal_attractor": "Treasure Magnet",
+  "item.terracraft.treasure_magnet": "Treasure Magnet",
   "item.terracraft.aglet": "Aglet",
   "item.terracraft.anklet": "Anklet of the Wind",
   "item.terracraft.hermes_boots": "Hermes Boots",
@@ -176,7 +178,7 @@
   "item.terracraft.goblin_tech.tooltip": "Displays movement speed, damage per second, and valuable ore",
   "item.terracraft.pda.tooltip": "Displays everything",
   "item.terracraft.cell_phone.tooltip": "Displays everything\nAllows you to return home at will",
-  "item.terracraft.universal_attractor.tooltip": "Increases pickup range for items",
+  "item.terracraft.treasure_magnet.tooltip": "Increases pickup range for items",
   "item.terracraft.aglet.tooltip": "5%% increased movement speed",
   "item.terracraft.anklet.tooltip": "10%% increased movement speed",
   "item.terracraft.hermes_boots.tooltip": "The wearer can run super fast",
@@ -205,26 +207,26 @@
   "item.terracraft.lava_waders.tooltip": "Provides the ability to walk on water & lava\nGrants immunity to fire blocks and 7 seconds of immunity to lava\nReduces damage from touching lava",
   "item.terracraft.water_walking_boots.tooltip": "Provides the ability to walk on water",
   "item.terracraft.obsidian_water_walking_boots.tooltip": "Provides the ability to walk on water\nGrants immunity to fire blocks",
-  "item.minecraft.potion.effect.lesser_mana_potion": "Potion of Lesser Mana",
-  "item.minecraft.splash_potion.effect.lesser_mana_potion": "Splash Potion of Lesser Mana",
-  "item.minecraft.lingering_potion.effect.lesser_mana_potion": "Lingering Potion of Lesser Mana",
-  "item.minecraft.tipped_arrow.effect.lesser_mana_potion": "Arrow of Lesser Mana",
-  "item.minecraft.potion.effect.mana_potion": "Potion of Mana",
-  "item.minecraft.splash_potion.effect.mana_potion": "Splash Potion of Mana",
-  "item.minecraft.lingering_potion.effect.mana_potion": "Lingering Potion of Mana",
-  "item.minecraft.tipped_arrow.effect.mana_potion": "Arrow of Mana",
-  "item.minecraft.potion.effect.greater_mana_potion": "Potion of Greater Mana",
-  "item.minecraft.splash_potion.effect.greater_mana_potion": "Splash Potion of Greater Mana",
-  "item.minecraft.lingering_potion.effect.greater_mana_potion": "Lingering Potion of Greater Mana",
-  "item.minecraft.tipped_arrow.effect.greater_mana_potion": "Arrow of Greater Mana",
-  "item.minecraft.potion.effect.super_mana_potion": "Potion of Super Mana",
-  "item.minecraft.splash_potion.effect.super_mana_potion": "Splash Potion of Super Mana",
-  "item.minecraft.lingering_potion.effect.super_mana_potion": "Lingering Potion of Super Mana",
-  "item.minecraft.tipped_arrow.effect.super_mana_potion": "Arrow of Super Mana",
-  "item.minecraft.potion.effect.mana_regen_potion": "Potion of Mana Regeneration",
-  "item.minecraft.splash_potion.effect.mana_regen_potion": "Splash Potion of Mana Regeneration",
-  "item.minecraft.lingering_potion.effect.mana_regen_potion": "Lingering Potion of Mana Regeneration",
-  "item.minecraft.tipped_arrow.effect.mana_regen_potion": "Arrow of Mana Regeneration",
+  "item.minecraft.potion.effect.lesser_mana": "Potion of Lesser Mana",
+  "item.minecraft.splash_potion.effect.lesser_mana": "Splash Potion of Lesser Mana",
+  "item.minecraft.lingering_potion.effect.lesser_mana": "Lingering Potion of Lesser Mana",
+  "item.minecraft.tipped_arrow.effect.lesser_mana": "Arrow of Lesser Mana",
+  "item.minecraft.potion.effect.mana": "Potion of Mana",
+  "item.minecraft.splash_potion.effect.mana": "Splash Potion of Mana",
+  "item.minecraft.lingering_potion.effect.mana": "Lingering Potion of Mana",
+  "item.minecraft.tipped_arrow.effect.mana": "Arrow of Mana",
+  "item.minecraft.potion.effect.greater_mana": "Potion of Greater Mana",
+  "item.minecraft.splash_potion.effect.greater_mana": "Splash Potion of Greater Mana",
+  "item.minecraft.lingering_potion.effect.greater_mana": "Lingering Potion of Greater Mana",
+  "item.minecraft.tipped_arrow.effect.greater_mana": "Arrow of Greater Mana",
+  "item.minecraft.potion.effect.super_mana": "Potion of Super Mana",
+  "item.minecraft.splash_potion.effect.super_mana": "Splash Potion of Super Mana",
+  "item.minecraft.lingering_potion.effect.super_mana": "Lingering Potion of Super Mana",
+  "item.minecraft.tipped_arrow.effect.super_mana": "Arrow of Super Mana",
+  "item.minecraft.potion.effect.mana_regen": "Potion of Mana Regeneration",
+  "item.minecraft.splash_potion.effect.mana_regen": "Splash Potion of Mana Regeneration",
+  "item.minecraft.lingering_potion.effect.mana_regen": "Lingering Potion of Mana Regeneration",
+  "item.minecraft.tipped_arrow.effect.mana_regen": "Arrow of Mana Regeneration",
   "item.terracraft.demonite_ore": "Demonite Ore",
   "item.terracraft.demonite_ingot": "Demonite Ingot",
   "block.terracraft.tinkerer_workshop": "Tinkerer's Table",
@@ -234,8 +236,11 @@
   "block.terracraft.trapped_frozen_chest": "Trapped Frozen Chest",
   "block.terracraft.ivy_chest": "Ivy Chest",
   "block.terracraft.trapped_ivy_chest": "Trapped Ivy Chest",
+  "block.terracraft.sandstone_chest": "Sandstone Chest",
+  "block.terracraft.trapped_sandstone_chest": "Trapped Sandstone Chest",
   "block.terracraft.water_chest": "Water Chest",
   "block.terracraft.skyware_chest": "Skyware Chest",
+  "block.terracraft.shadow_chest": "Shadow Chest",
   "block.terracraft.redstone_stone": "Redstone Stone",
   "block.terracraft.redstone_deepslate": "Redstone Deepslate",
   "block.terracraft.instant_tnt": "Instant TNT",
@@ -308,7 +313,7 @@
   "text.autoconfig.terracraft.option.general.corruptionSpreadRarity.@Tooltip[1]": "The higher the value the slower the Corruption spreads",
   "text.autoconfig.terracraft.category.worldgen": "World Gen",
   "text.autoconfig.terracraft.option.worldgen.accessoryRarity": "Accessory rarity",
-  "text.autoconfig.terracraft.option.worldgen.accessoryRarity.@Tooltip[0]": "Affects how common terracraft are (does not affect mimics)",
+  "text.autoconfig.terracraft.option.worldgen.accessoryRarity.@Tooltip[0]": "Affects how common Accessories are (does not affect mimics)",
   "text.autoconfig.terracraft.option.worldgen.accessoryRarity.@Tooltip[1]": "When this is 1, the default accessory spawn rates will be used",
   "text.autoconfig.terracraft.option.worldgen.accessoryRarity.@Tooltip[2]": "Values higher that 1 will decrease spawn rates while values lower than 1 will increase spawn rates",
   "text.autoconfig.terracraft.option.worldgen.accessoryRarity.@Tooltip[3]": "Doubling this value will (roughly) halve the chance a container contains an accessory",
@@ -322,7 +327,7 @@
   "text.autoconfig.terracraft.option.worldgen.caveChest.chestRarity.@Tooltip[1]": "Also depends on the density and shape of caves",
   "text.autoconfig.terracraft.option.worldgen.caveChest.mimicChance": "Mimic chance",
   "text.autoconfig.terracraft.option.worldgen.caveChest.mimicChance.@Tooltip[0]": "Probability for a mimic to spawn",
-  "text.autoconfig.terracraft.option.worldgen.caveChest.mimicChance.@Tooltip[1]": "instead of a loot container",
+  "text.autoconfig.terracraft.option.worldgen.caveChest.mimicChance.@Tooltip[1]": "instead of a loot container (Currently unused)",
   "text.autoconfig.terracraft.option.worldgen.caveChest.oreChance": "Ore vein chance",
   "text.autoconfig.terracraft.option.worldgen.caveChest.oreChance.@Tooltip[0]": "Probability for an ore vein to",
   "text.autoconfig.terracraft.option.worldgen.caveChest.oreChance.@Tooltip[1]": "generate underneath cave chest",
