--- a/src/main/resources/assets/terracraft/lang/es_ec.json
+++ b/src/main/resources/assets/terracraft/lang/es_ec.json
@@ -30,7 +30,7 @@
   "item.terracraft.scarf_of_invisibility": "Bufanda de la Invisibilidad",
   "item.terracraft.digging_claws": "Garras de Excavasión",
   "item.terracraft.steadfast_spikes": "Garras de Agarre",
-  "item.terracraft.universal_attractor": "Imán Universal",
+  "item.terracraft.treasure_magnet": "Imán Universal",
   "item.terracraft.kitty_slippers": "Pantuflas de Gatito",
   "item.terracraft.running_shoes": "Zapatos para Correr",
   "item.terracraft.bunny_hoppers": "Pantuflas de Conejito",
@@ -67,7 +67,7 @@
   "item.terracraft.scarf_of_invisibility.tooltip": "Hace al portador invisible",
   "item.terracraft.digging_claws.tooltip": "Incrementa la velocidad de romper bloques del portado",
   "item.terracraft.steadfast_spikes.tooltip": "Otorga inmunidad al empuje",
-  "item.terracraft.universal_attractor.tooltip": "Atrae items cercanos",
+  "item.terracraft.treasure_magnet.tooltip": "Atrae items cercanos",
   "item.terracraft.kitty_slippers.tooltip": "Los Creepers se alejarán de quien las use",
   "item.terracraft.running_shoes.tooltip": "Aumenta el movimiento y altura de pisadas en el portador",
   "item.terracraft.bunny_hoppers.tooltip": "Aumenta el nivel de salto y otorga inmunidad al daño por caida en el portador",
