Information Accessories now use TranslatableComponent instead of strings
Previous fix for Corruption Crash didn't work, seems fairly rare annoyingly. Will have to figure something out.

Going to make the Information Accessories Effect Toggle work for when in inventory as well as when equipped, having some troubles but should be able to get it working tomorrow.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -10,6 +10,21 @@
   "terracraft.status.cosmeticonly": "Cosmetic only",
   "terracraft.status.effectsonly": "Effects only",
   "terracraft.status.toggletooltip": "(right click)",
+  "terracraft.ui.depth": "Depth",
+  "terracraft.ui.dps": "DPS",
+  "terracraft.ui.oreDetected": "Detected Nearby",
+  "terracraft.ui.oreNotDetected": "No Ores Detected Nearby",
+  "terracraft.ui.moonPhase": "Moon Phase",
+  "terracraft.ui.fullMoon": "Full Moon",
+  "terracraft.ui.waningGibbousMoon": "Waning Gibbous",
+  "terracraft.ui.thirdQuarterMoon": "Third Quarter",
+  "terracraft.ui.waningCrescentMoon": "Waning Crescent",
+  "terracraft.ui.newMoon": "New Moon",
+  "terracraft.ui.waxingCrescentMoon": "Waxing Crescent",
+  "terracraft.ui.firstQuarterMoon": "First Quarter",
+  "terracraft.ui.waxingGibbousMoon": "Waxing Gibbous",
+  "terracraft.ui.unknownMoonPhase": "Unknown Phase",
+  "terracraft.ui.speed": "Speed",
   "itemGroup.terracraft.item_group": "Terracraft",
   "terracraft.advancements.root.title": "TerraCraft",
   "terracraft.advancements.root.description": "A terrific journey begins!",
