Added more floating island types. Added Diving Helmet, Diving Gear, and Neptune's Shell.
Disabled Rocket Boots when in water.
Fixed running sound playing when not on solid blocks.

Removed outdated Localisation files (if you want to create add a translation just pull it).

MixinExtras has been added to make things easier to add, needed it for Neptune's Shell hiding air bubbles.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -51,7 +51,8 @@
   "item.terracraft.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
   "item.terracraft.lens": "Lens",
   "item.terracraft.black_lens": "Black Lens",
-  "item.terracraft.snorkel": "Snorkel",
+  "item.terracraft.diving_helmet": "Diving Helmet",
+  "item.terracraft.diving_gear": "Diving Gear",
   "item.terracraft.panic_necklace": "Panic Necklace",
   "item.terracraft.flippers": "Flipper",
   "item.terracraft.obsidian_skull": "Obsidian Skull",
@@ -95,6 +96,7 @@
   "item.terracraft.warrior_emblem": "Warrior Emblem",
   "item.terracraft.sorcerer_emblem": "Sorcerer Emblem",
   "item.terracraft.avenger_emblem": "Avenger Emblem",
+  "item.terracraft.neptune_shell": "Neptune's Shell",
   "item.terracraft.gold_watch": "Gold Watch",
   "item.terracraft.depth_meter": "Depth Meter",
   "item.terracraft.compass": "Compass",
@@ -137,7 +139,8 @@
   "item.terracraft.lava_waders": "Lava Waders",
   "item.terracraft.water_walking_boots": "Water Walking Boots",
   "item.terracraft.obsidian_water_walking_boots": "Obsidian Water Walking Boots",
-  "item.terracraft.snorkel.tooltip": "Allows the wearer to\nbreathe underwater",
+  "item.terracraft.diving_helmet.tooltip": "Greatly extends underwater breathing",
+  "item.terracraft.diving_gear.tooltip": "Grants the ability to swim better\nGreatly extends underwater breathing",
   "item.terracraft.panic_necklace.tooltip": "Increases movement speed after taking damage",
   "item.terracraft.flippers.tooltip": "Grants the ability to swim better",
   "item.terracraft.obsidian_skull.tooltip": "Grants immunity to fire blocks",
@@ -180,6 +183,7 @@
   "item.terracraft.warrior_emblem.tooltip": "15%% increased melee damage",
   "item.terracraft.sorcerer_emblem.tooltip": "15%% increased magic damage",
   "item.terracraft.avenger_emblem.tooltip": "12%% increased damage",
+  "item.terracraft.neptune_shell.tooltip": "Transforms the holder into merfolk when entering water",
   "item.terracraft.gold_watch.tooltip": "Tells the time",
   "item.terracraft.depth_meter.tooltip": "Displays depth",
   "item.terracraft.compass.tooltip": "Displays horizontal position",
@@ -298,6 +302,7 @@
   "biome.terracraft.corruption_desert": "The Corruption Desert",
   "effect.terracraft.instant_mana": "Instant Mana",
   "effect.terracraft.mana_regen": "Mana Regeneration",
+  "effect.terracraft.merfolk": "Merfolk",
   "terracraft.subtitles.entity.mimic.close": "Mimic closes",
   "terracraft.subtitles.entity.mimic.open": "Mimic hops",
   "terracraft.subtitles.entity.mimic.hurt": "Mimic hurts",
