Started renaming mod to TerraMine (have to change all the internal naming now).
Ancient Chisel now functions (I forgot I guess), Mining Potion added since it uses the same mixin.
Updated some deprecated code.

Bump version to 1.3.1.

--- a/src/main/resources/assets/terracraft/lang/en_us.json
+++ b/src/main/resources/assets/terracraft/lang/en_us.json
@@ -246,6 +246,10 @@
   "item.minecraft.splash_potion.effect.mana_regen": "Splash Potion of Mana Regeneration",
   "item.minecraft.lingering_potion.effect.mana_regen": "Lingering Potion of Mana Regeneration",
   "item.minecraft.tipped_arrow.effect.mana_regen": "Arrow of Mana Regeneration",
+  "item.minecraft.potion.effect.mining_speed": "Potion of Mining Speed",
+  "item.minecraft.splash_potion.effect.mining_speed": "Splash Potion of Mining Speed",
+  "item.minecraft.lingering_potion.effect.mining_speed": "Lingering Potion of Mining Speed",
+  "item.minecraft.tipped_arrow.effect.mining_speed": "Arrow of Mining Speed",
   "item.terracraft.demonite_ore": "Demonite Ore",
   "item.terracraft.demonite_ingot": "Demonite Ingot",
   "block.terracraft.tinkerer_workshop": "Tinkerer's Table",
@@ -302,6 +306,7 @@
   "biome.terracraft.corruption_desert": "The Corruption Desert",
   "effect.terracraft.instant_mana": "Instant Mana",
   "effect.terracraft.mana_regen": "Mana Regeneration",
+  "effect.terracraft.mining_speed": "Mining Speed",
   "effect.terracraft.merfolk": "Merfolk",
   "terracraft.subtitles.entity.mimic.close": "Mimic closes",
   "terracraft.subtitles.entity.mimic.open": "Mimic hops",
