--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -250,6 +250,10 @@
   "item.minecraft.splash_potion.effect.mining_speed": "Splash Potion of Mining Speed",
   "item.minecraft.lingering_potion.effect.mining_speed": "Lingering Potion of Mining Speed",
   "item.minecraft.tipped_arrow.effect.mining_speed": "Arrow of Mining Speed",
+  "item.minecraft.potion.effect.ironskin": "Potion of Ironskin",
+  "item.minecraft.splash_potion.effect.ironskin": "Splash Potion of Ironskin",
+  "item.minecraft.lingering_potion.effect.ironskin": "Lingering Potion of Ironskin",
+  "item.minecraft.tipped_arrow.effect.ironskin": "Arrow of Ironskin",
   "item.terramine.demonite_ore": "Demonite Ore",
   "item.terramine.demonite_ingot": "Demonite Ingot",
   "block.terramine.tinkerer_workshop": "Tinkerer's Table",
@@ -307,6 +311,7 @@
   "effect.terramine.instant_mana": "Instant Mana",
   "effect.terramine.mana_regen": "Mana Regeneration",
   "effect.terramine.mining_speed": "Mining Speed",
+  "effect.terramine.ironskin": "Ironskin",
   "effect.terramine.merfolk": "Merfolk",
   "terramine.subtitles.entity.mimic.close": "Mimic closes",
   "terramine.subtitles.entity.mimic.open": "Mimic hops",
