--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -169,8 +169,8 @@
   "item.terramine.magic_missile.tooltip": "Casts a controllable missile",
   "item.terramine.flamelash.tooltip": "Summons a controllable ball of fire",
   "item.terramine.rainbow_rod.tooltip": "Casts a controllable rainbow",
-  "item.terramine.fire_gauntlet.tooltip": "Causes the wearer's melee\nattacks to deal fire damage",
-  "item.terramine.feral_claws.tooltip": "12%% increased melee speed",
+  "item.terramine.fire_gauntlet.tooltip": "Increases melee knockback and melee attacks inflict fire damage\n12%% increased melee damage and speed\nEnables auto swing for melee weapons",
+  "item.terramine.feral_claws.tooltip": "12%% increased melee speed\nEnables auto swing for melee weapons",
   "item.terramine.titan_glove.tooltip": "Increases melee knockback\nIncreases the size of melee weapons",
   "item.terramine.power_glove.tooltip": "Increases melee knockback\n12%% increased melee speed\nEnables auto swing for melee weapons\nIncreases the size of melee weapons",
   "item.terramine.mechanical_glove.tooltip": "Increases melee knockback\n12%% increased melee damage and speed\nEnables auto swing for melee weapons\nIncreases the size of melee weapons",
