Added custom color for Travelers Titles from YUNG.
Trying to get repo working.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -307,7 +307,9 @@
   "block.terramine.corrupted_packed_ice": "Corrupted Packed Ice",
   "block.terramine.corrupted_blue_ice": "Corrupted \"Blue\" Ice",
   "biome.terramine.corruption": "The Corruption",
+  "biome.terramine.corruption.color": "bc48ff",
   "biome.terramine.corruption_desert": "The Corruption Desert",
+  "biome.terramine.corruption_desert.color": "bc48ff",
   "effect.terramine.instant_mana": "Instant Mana",
   "effect.terramine.mana_regen": "Mana Regeneration",
   "effect.terramine.mining_speed": "Mining Speed",
