Re-Added Cobalt and Obsidian shield. No longer uses Fabric Shield API as it is currently outdated and has multiple bugs, overall its just jank. Shields now have descriptions and can be equipped in the accessories slots (should also work with Tiered now)
Updated resource pack version.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -222,7 +222,7 @@
   "item.terramine.toolbox.tooltip": "Increases block placement & tool range by 1",
   "item.terramine.extendo_grip.tooltip": "Increases block placement & tool range by 3",
   "item.terramine.ancient_chisel.tooltip": "Increases mining speed by 25%%\n'Ancient problems require ancient solutions'",
-  "item.terramine.whoopee_cushion.tooltip": "Increases the wearer's flatulence",
+  "item.terramine.whoopee_cushion.tooltip": "May annoy others",
   "item.terramine.lava_waders.tooltip": "Provides the ability to walk on water & lava\nGrants immunity to fire blocks and 7 seconds of immunity to lava\nReduces damage from touching lava",
   "item.terramine.water_walking_boots.tooltip": "Provides the ability to walk on water",
   "item.terramine.obsidian_water_walking_boots.tooltip": "Provides the ability to walk on water\nGrants immunity to fire blocks",
