Added Piggy Bank and Safe.
Fixed Demon Eyes being allowed to spawn in Deep Dark.

Temporarily readded grass and foliage colour to Corruption (maybe will need to remove again depending on how i spread the biome)

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -46,6 +46,8 @@
   "entity.terramine.water_chest": "Water Chest",
   "entity.terramine.skyware_chest": "Skyware Chest",
   "entity.terramine.shadow_chest": "Shadow Chest",
+  "entity.terramine.piggy_bank": "Piggy Bank",
+  "entity.terramine.safe": "Safe",
   "entity.minecraft.villager.goblin_tinkerer": "Goblin Tinkerer",
   "item.terramine.mimic_spawn_egg": "Mimic Spawn Egg",
   "item.terramine.demon_eye_spawn_egg": "Demon Eye Spawn Egg",
@@ -268,6 +270,8 @@
   "block.terramine.water_chest": "Water Chest",
   "block.terramine.skyware_chest": "Skyware Chest",
   "block.terramine.shadow_chest": "Shadow Chest",
+  "block.terramine.piggy_bank": "Piggy Bank",
+  "block.terramine.safe": "Safe",
   "block.terramine.redstone_stone": "Redstone Stone",
   "block.terramine.redstone_deepslate": "Redstone Deepslate",
   "block.terramine.instant_tnt": "Instant TNT",
