Added Blue, Green, and Purple Dungeon Bricks (normal, cracked, and fancy).
Dungeon is being worked on now, more blocks will probably be made if needed.
Just need to figure out how the Jigsaw block works.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -275,6 +275,15 @@
   "block.terramine.redstone_stone": "Redstone Stone",
   "block.terramine.redstone_deepslate": "Redstone Deepslate",
   "block.terramine.instant_tnt": "Instant TNT",
+  "block.terramine.blue_brick": "Blue Bricks",
+  "block.terramine.cracked_blue_brick": "Cracked Blue Bricks",
+  "block.terramine.fancy_blue_brick": "Fancy Blue Bricks",
+  "block.terramine.green_brick": "Green Bricks",
+  "block.terramine.cracked_green_brick": "Cracked Green Bricks",
+  "block.terramine.fancy_green_brick": "Fancy Green Bricks",
+  "block.terramine.purple_brick": "Purple Bricks",
+  "block.terramine.cracked_purple_brick": "Cracked Purple Bricks",
+  "block.terramine.fancy_purple_brick": "Fancy Purple Bricks",
   "block.terramine.corrupted_grass": "Corrupted Grass Block",
   "block.terramine.corrupted_gravel": "Corrupted Gravel",
   "block.terramine.corrupted_sand": "Corrupted Sand",
@@ -347,6 +356,11 @@
   "text.autoconfig.terramine.option.general.corruptionSpreadRarity": "Corruption Spread Rarity",
   "text.autoconfig.terramine.option.general.corruptionSpreadRarity.@Tooltip[0]": "How rarely Corruption blocks spread",
   "text.autoconfig.terramine.option.general.corruptionSpreadRarity.@Tooltip[1]": "The higher the value the slower the Corruption spreads",
+  "text.autoconfig.terramine.option.general.disableFallingStars": "Disable Falling Stars",
+  "text.autoconfig.terramine.option.general.disableFallingStars.@Tooltip": "Disables Falling Stars from randomly falling",
+  "text.autoconfig.terramine.option.general.fallingStarRarity": "Falling Star Rarity",
+  "text.autoconfig.terramine.option.general.fallingStarRarity.@Tooltip[0]": "How rarely Falling Stars will fall",
+  "text.autoconfig.terramine.option.general.fallingStarRarity.@Tooltip[1]": "The higher the value the more often stars will fall",
   "text.autoconfig.terramine.category.worldgen": "World Gen",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity": "Accessory rarity",
   "text.autoconfig.terramine.option.worldgen.accessoryRarity.@Tooltip[0]": "Affects how common Accessories are (does not affect mimics)",
