--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -99,6 +99,12 @@
   "item.terramine.sorcerer_emblem": "Sorcerer Emblem",
   "item.terramine.avenger_emblem": "Avenger Emblem",
   "item.terramine.neptune_shell": "Neptune's Shell",
+  "item.terramine.moon_charm": "Moon Charm",
+  "item.terramine.moon_shell": "Moon Shell",
+  "item.terramine.sun_stone": "Sun Stone",
+  "item.terramine.moon_stone": "Moon Stone",
+  "item.terramine.celestial_stone": "Celestial Stone",
+  "item.terramine.celestial_shell": "Celestial Shell",
   "item.terramine.gold_watch": "Gold Watch",
   "item.terramine.depth_meter": "Depth Meter",
   "item.terramine.compass": "Compass",
@@ -186,6 +192,12 @@
   "item.terramine.sorcerer_emblem.tooltip": "15%% increased magic damage",
   "item.terramine.avenger_emblem.tooltip": "12%% increased damage",
   "item.terramine.neptune_shell.tooltip": "Transforms the holder into merfolk when entering water",
+  "item.terramine.moon_charm.tooltip": "Turns the holder into a werewolf at night",
+  "item.terramine.moon_shell.tooltip": "Turns the holder into a werewolf at night and a merfolk when entering water",
+  "item.terramine.sun_stone.tooltip": "If worn during the day, grants minor increase to damage, melee speed, critical strike chance,\nlife regeneration, defense, mining speed, and minion knockback",
+  "item.terramine.moon_stone.tooltip": "If worn during the night, grants minor increase to damage, melee speed, critical strike chance,\nlife regeneration, defense, mining speed, and minion knockback",
+  "item.terramine.celestial_stone.tooltip": "Minor increase to damage, melee speed, critical strike chance,\nlife regeneration, defense, mining speed, and minion knockback",
+  "item.terramine.celestial_shell.tooltip": "Turns the holder into a werewolf at night and a merfolk when entering water\nMinor increase to damage, melee speed, critical strike chance,\nlife regeneration, defense, mining speed, and minion knockback",
   "item.terramine.gold_watch.tooltip": "Tells the time",
   "item.terramine.depth_meter.tooltip": "Displays depth",
   "item.terramine.compass.tooltip": "Displays horizontal position",
@@ -328,6 +340,7 @@
   "effect.terramine.mining_speed": "Mining Speed",
   "effect.terramine.ironskin": "Ironskin",
   "effect.terramine.merfolk": "Merfolk",
+  "effect.terramine.werewolf": "Werewolf",
   "terramine.subtitles.entity.mimic.close": "Mimic closes",
   "terramine.subtitles.entity.mimic.open": "Mimic hops",
   "terramine.subtitles.entity.mimic.hurt": "Mimic hurts",
