--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -27,13 +27,17 @@
   "terramine.ui.speed": "Speed",
   "itemGroup.terramine.item_group": "TerraMine",
   "terramine.advancements.root.title": "TerraMine",
-  "terramine.advancements.root.description": "A terrific journey begins!",
+  "terramine.advancements.root.description": "Familiar yet different",
   "terramine.advancements.i_am_loot.title": "I Am Loot!",
   "terramine.advancements.i_am_loot.description": "Find an Accessory",
   "terramine.advancements.star_power.title": "Star Power",
   "terramine.advancements.star_power.description": "Craft a mana crystal out of fallen stars, and consume it",
   "terramine.advancements.the_corruption.title": "The Corruption",
-  "terramine.advancements.the_corruption.description": "Enter the Corruption biome",
+  "terramine.advancements.the_corruption.description": "Found a Corruption biome",
+  "terramine.advancements.dead_men_tell_no_tales.title": "Dead Men Tell No Tales",
+  "terramine.advancements.dead_men_tell_no_tales.description": "You were so preoccupied with whether or not you could open the chest that you didn't stop to think if you should",
+  "terramine.advancements.dungeon_crawler.title": "Dungeon Crawler",
+  "terramine.advancements.dungeon_crawler.description": "Found a Dungeon, I wonder what's inside?",
   "terramine.advancements.chest_slayer.title": "Chest Slayer",
   "terramine.advancements.chest_slayer.description": "Kill a Mimic",
   "entity.terramine.mimic": "Mimic",
@@ -42,6 +46,7 @@
   "entity.terramine.gold_chest": "Gold Chest",
   "entity.terramine.frozen_chest": "Frozen Chest",
   "entity.terramine.ivy_chest": "Ivy Chest",
+  "entity.terramine.instant_tnt": "Instant TNT",
   "entity.terramine.sandstone_chest": "Sandstone Chest",
   "entity.terramine.water_chest": "Water Chest",
   "entity.terramine.skyware_chest": "Skyware Chest",
@@ -412,5 +417,9 @@
   "commands.setMaxMana.fail": "Failed to set Max Mana for that player to %s stars",
   "commands.getMaxMana.pass": "%s has %s Max Mana stars",
   "commands.getMaxMana.noMana": "%s has no mana",
-  "commands.getMaxMana.fail": "Failed to get Max Mana for that player"
+  "commands.getMaxMana.fail": "Failed to get Max Mana for that player",
+  "commands.setHardmode.pass": "Set Hardmode to %s",
+  "commands.setHardmode.fail": "Failed to set Hardmode to %s",
+  "commands.getHardmode.pass": "Hardmode is %s",
+  "commands.getHardmode.fail": "Failed to get Hardmode state"
 }
