Even more new advancements. Also changed I Am Loot to Accessorise so that I can have the correct I Am Loot advancement.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -28,16 +28,22 @@
   "itemGroup.terramine.item_group": "TerraMine",
   "terramine.advancements.root.title": "TerraMine",
   "terramine.advancements.root.description": "Familiar yet different",
-  "terramine.advancements.i_am_loot.title": "I Am Loot!",
-  "terramine.advancements.i_am_loot.description": "Find an Accessory",
-  "terramine.advancements.star_power.title": "Star Power",
-  "terramine.advancements.star_power.description": "Craft a mana crystal out of fallen stars, and consume it",
-  "terramine.advancements.the_corruption.title": "The Corruption",
-  "terramine.advancements.the_corruption.description": "Found a Corruption biome",
+  "terramine.advancements.accessorise.title": "Accessorise",
+  "terramine.advancements.accessorise.description": "Obtain an Accessory",
+  "terramine.advancements.boots_of_the_hero.title": "Boots of the Hero",
+  "terramine.advancements.boots_of_the_hero.description": "Obtain the Terraspark Boots, forged from the finest boots of fire and ice",
   "terramine.advancements.dead_men_tell_no_tales.title": "Dead Men Tell No Tales",
   "terramine.advancements.dead_men_tell_no_tales.description": "You were so preoccupied with whether or not you could open the chest that you didn't stop to think if you should",
   "terramine.advancements.dungeon_crawler.title": "Dungeon Crawler",
-  "terramine.advancements.dungeon_crawler.description": "Found a Dungeon, I wonder what's inside?",
+  "terramine.advancements.dungeon_crawler.description": "Find a Dungeon, I wonder what's inside?",
+  "terramine.advancements.i_am_loot.title": "I Am Loot!",
+  "terramine.advancements.i_am_loot.description": "Discover a golden chest underground and take a peek at its contents",
+  "terramine.advancements.prismancer.title": "Prismancer",
+  "terramine.advancements.prismancer.description": "Obtain a rainbow rod",
+  "terramine.advancements.star_power.title": "Star Power",
+  "terramine.advancements.star_power.description": "Craft a mana crystal out of fallen stars, and consume it",
+  "terramine.advancements.the_corruption.title": "The Corruption",
+  "terramine.advancements.the_corruption.description": "Find a Corruption biome",
   "terramine.advancements.chest_slayer.title": "Chest Slayer",
   "terramine.advancements.chest_slayer.description": "Kill a Mimic",
   "entity.terramine.mimic": "Mimic",
