Added Fledgling Wings (Very WIP). Decided to get some work done before I go to bed, still work to be done especially around the gliding mechanic.
I sleep now.

--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -141,8 +141,7 @@
   "item.terramine.flower_boots": "Flower Boots",
   "item.terramine.fairy_boots": "Fairy Boots",
   "item.terramine.ice_skates": "Ice Skates",
-  "item.terramine.bunny_hoppers": "Bunny Hoppers",
-  "item.terramine.villager_hat": "Villager Hat",
+  "item.terramine.fledgling_wings": "Fledgling Wings",
   "item.terramine.cloud_in_a_bottle": "Cloud in a Bottle",
   "item.terramine.lucky_horseshoe": "Lucky Horseshoe",
   "item.terramine.obsidian_horseshoe": "Obsidian Horseshoe",
@@ -234,6 +233,7 @@
   "item.terramine.flower_boots.tooltip": "Flowers grow on the grass you run on",
   "item.terramine.fairy_boots.tooltip": "Allows flight\nThe wearer can run super fast\nFlowers grow on the grass you run on",
   "item.terramine.ice_skates.tooltip": "Provides extra mobility on ice",
+  "item.terramine.fledgling_wings.tooltip": "Allows flight and slow fall",
   "item.terramine.bunny_hoppers.tooltip": "Increases the wearer's jump height\nand grants immunity to fall damage",
   "item.terramine.villager_hat.tooltip": "Decreases the trading prices of villagers",
   "item.terramine.cloud_in_a_bottle.tooltip": "Allows the holder to double jump",
