--- a/src/main/resources/assets/terramine/lang/en_us.json
+++ b/src/main/resources/assets/terramine/lang/en_us.json
@@ -142,6 +142,9 @@
   "item.terramine.fairy_boots": "Fairy Boots",
   "item.terramine.ice_skates": "Ice Skates",
   "item.terramine.fledgling_wings": "Fledgling Wings",
+  "item.terramine.angel_wings": "Angel Wings",
+  "item.terramine.demon_wings": "Demon Wings",
+  "item.terramine.leaf_wings": "Leaf Wings",
   "item.terramine.cloud_in_a_bottle": "Cloud in a Bottle",
   "item.terramine.lucky_horseshoe": "Lucky Horseshoe",
   "item.terramine.obsidian_horseshoe": "Obsidian Horseshoe",
@@ -234,6 +237,9 @@
   "item.terramine.fairy_boots.tooltip": "Allows flight\nThe wearer can run super fast\nFlowers grow on the grass you run on",
   "item.terramine.ice_skates.tooltip": "Provides extra mobility on ice",
   "item.terramine.fledgling_wings.tooltip": "Allows flight and slow fall",
+  "item.terramine.angel_wings.tooltip": "Allows flight and slow fall",
+  "item.terramine.demon_wings.tooltip": "Allows flight and slow fall",
+  "item.terramine.leaf_wings.tooltip": "Allows flight and slow fall",
   "item.terramine.bunny_hoppers.tooltip": "Increases the wearer's jump height\nand grants immunity to fall damage",
   "item.terramine.villager_hat.tooltip": "Decreases the trading prices of villagers",
   "item.terramine.cloud_in_a_bottle.tooltip": "Allows the holder to double jump",
